cabal-version:      3.14
name:               sdl2mvc
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
    build-depends:
          base                    >= 4.20.0.0      && < 5
        , stm                     >= 2.5.3         && < 2.6
        , async                   >= 2.2.5         && < 2.3
        , gi-cairo-render         >= 0.1.2         && < 0.2
        -- , diagrams-gi-cairo       >= 1.4.2
        -- , diagrams-core           >= 1.5.1
        -- , diagrams-lib            >= 1.4.6.2
        , data-default-class      >= 0.2          && < 0.3
        , colour                  >= 2.3.6        && < 2.4
        -- , managed                 >= 1.0.10       && < 1.1
        , hgeometry-combinatorial >= 1.0          && < 1.1
        , hgeometry:kernel        >= 1.0          && < 1.1
        , hgeometry:vector
        , hgeometry:point
        , semigroupoids           >= 6            && < 6.1
        , sdl2                    >= 2.5.5        && < 2.6
        , lens                    >= 5            && < 5.4
        , linear                  >= 1.20         && < 1.24
        , effectful               >= 2.4          && < 2.5
        , resource-effectful      >= 0.1          && < 0.2
        , vary                    >= 0.1.1.3      && < 0.2
        , text                    >= 2.1          && < 2.2

    default-language: GHC2024
    default-extensions:
      --   DataKinds
      -- , TypeFamilies
      -- , GADTs
      -- , KindSignatures
      -- , ScopedTypeVariables
      -- , DerivingStrategies
      -- , DerivingVia
      -- , GeneralizedNewtypeDeriving
      -- , DeriveGeneric
      -- , DeriveFunctor
      -- , PatternSynonyms
      -- , TupleSections
      -- , LambdaCase
      ViewPatterns
      -- , FunctionalDependencies


library
    import:           setup
    exposed-modules:
        SDL2MVC
        SDL2MVC.Cairo
        SDL2MVC.App
        SDL2MVC.Reaction
        SDL2MVC.Render
        SDL2MVC.Framework
        SDL2MVC.Updated
        SDL2MVC.Send

    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

executable sdl2mvc
    import:           setup
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        sdl2mvc

    hs-source-dirs:   app
    default-language: GHC2024


-- executable debugger
--     import:           setup
--     main-is:          Debugger.hs
--     -- other-modules:
--     -- other-extensions:
--     build-depends:
--         sdl2mvc

--     hs-source-dirs:   app
--     default-language: GHC2024


test-suite sdl2mvc-test
    import:           setup
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        sdl2mvc
